@@ -1,8 +1,10 @@
 Collapsing Pages Changelog
 
 * 0.3.2 (2009/01/07)
-    * not loading unnecessary code for admin pages
     * added version to javascript file
+    * not loading unnecessary code for admin pages (fixes interference with
+      akismet stats page
+    * 'self' tag now gets added in subpages
 
 * 0.3.1 (2009/01/06)
     * Finally fixed disappearing widget problem when trying to add to sidebar
